[gd_scene load_steps=6 format=3 uid="uid://01q6pnnrrggs"]

[ext_resource type="Texture2D" uid="uid://bjs3bg012nujk" path="res://Assets/spacebg.png" id="1_l1fdj"]
[ext_resource type="Script" path="res://Escenas/escena_principal.gd" id="1_lgpwl"]
[ext_resource type="FontFile" uid="uid://c057uuu28m84p" path="res://Assets/Teko-VariableFont_wght.ttf" id="3_j1mvs"]

[sub_resource type="Theme" id="Theme_3yqcp"]
default_font = ExtResource("3_j1mvs")

[sub_resource type="Theme" id="Theme_ufdps"]

[node name="Node2D" type="Node2D"]
position = Vector2(3, -16)
script = ExtResource("1_lgpwl")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(332, 669)
scale = Vector2(1.77188, 2.25938)
texture = ExtResource("1_l1fdj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = -28.0
offset_right = 728.0
offset_bottom = 1252.0
scale = Vector2(0.978631, 1.02016)
theme = SubResource("Theme_3yqcp")

[node name="Button" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.5
offset_top = -15.5
offset_right = 51.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3.606)
theme = SubResource("Theme_ufdps")
theme_override_colors/font_disabled_color = Color(0.109709, 0.396309, 0.730787, 1)
theme_override_font_sizes/font_size = 0
text = "Iniciar juego
"
text_overrun_behavior = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 223.782
offset_top = -363.479
offset_right = 405.782
offset_bottom = -339.479
grow_vertical = 0
scale = Vector2(3.26405, 3.19674)
size_flags_vertical = 8

[node name="Label" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
text = "Obten el resultado de :
"

[node name="OperacionAritmetica" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(56, 1174)
gizmo_extents = 0.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
